# walle_project

./: README.md  ros-humble-joint-state-publisher_2.4.0-1jammy.20250325.201250_amd64.deb
install/: local_setup.sh  setup.sh
install/walle_description/share/walle_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/walle_control/: package.xml  setup.cfg  setup.py
src/walle_control/walle_control/: obstacle_avoidance.py
src/walle_description/: CMakeLists.txt  package.xml
src/walle_description/launch/: display_walle.launch.py  gazebo_walle.launch.py
src/walle_description/scripts/: joint_state_publisher.py
src/walle_description/urdf/: walle.urdf
src/walle_description/word/: empty.word
src/walle_description/worlds/: obstacle_world.world
src/wallerson_control/: package.xml  setup.cfg
src/wallerson_control/wallerson_control/: basic_movement.py
src/wallerson_control_backup/: setup.py
src/wallerson_control_backup/wallerson_control/: basic_movement.py
