<?xml version="1.0"?>
<package format="3">
  <name>walle_description</name>
  <version>0.0.0</version>
  <description>The walle_description package</description>
  <maintainer email="danilo@todo.todo">danilo</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend> <!-- Adicionado -->
  <depend>gazebo_plugins</depend> <!-- Adicionado -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
